# rust-public-lib-template

./: .gitattributes  .gitignore  AGENTS.md  AGENTS.ts  CHANGELOG.md  Cargo.toml  README.md  README.ts  clippy.toml  commitlint.config.mjs  fnox.toml  lefthook.yml  mise.toml  rust-toolchain.toml
.agents/: cli-for-type.md  cli.md  concepts.md  error-handling.md  general.md  knowledge.concepts.md  minloss.draft.md  minloss.md  philosophy.draft.md  support.md
.agents/crates/: clap.md  serde.md
.github/workflows/: ci.yml
.mise/tasks/fix/: cargo.sh  fnox.sh  name.sh
.mise/tasks/fnox/keychain/: set.sh
.mise/tasks/git/: install-hooks.sh  repair-index.sh  repo-name.sh  stage-fixed.sh
.repoconf/hooks/: post-init.sh
src/: lib.rs
